using the ESC key to close the search modal fixing the scrollbars in IE enabling inertial scrolling in iOS on the related work items

--- a/src/sass/blog/_blog-search.scss
+++ b/src/sass/blog/_blog-search.scss
@@ -28,6 +28,7 @@
 		@extend %max-width--blog;
 		height: 100%;
 		overflow: scroll;
+		-ms-overflow-style: -ms-autohiding-scrollbar;
 		-webkit-overflow-scrolling: touch;
 	}
 
